Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-36360

Disabling FK and UK checks on appliers may lead to deadlock

    XMLWordPrintable

Details

    Description

      If both FK and UK checks are disabled on appliers, and there's at least two appliers, and they both execute INSERT statements into the same table, it happens that such inserts are treated as bulk inserts in InnoDB and the first insert grabs an X-lock on a table. The other applier with similar INSERT statement has to wait, but if the lock holder has seqno higher than the waiter, then it will deadlock in Galera waiting on the earlier applier to commit, while that earlier applier is waiting for InnoDB table lock to be released.

      Attachments

        Issue Links

          Activity

            People

              sysprg Julius Goryavsky (Inactive)
              denis.protivensky Denis Protivensky
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.